fix the expiration spacing

--- a/app/sass/shared/_widgets.scss
+++ b/app/sass/shared/_widgets.scss
@@ -1170,7 +1170,7 @@ ul.pillbox {
           margin-right: 5px;
           float: left;
           height: 22px;
-          line-height: 22px;
+          line-height: 19px;
         }
         select {
           position: static;
